# ChangeLog for app-mobilephone/gammu
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.6 2005/08/14 10:01:25 hansmi Exp $

  14 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
  gammu-1.01.0-r1.ebuild:
  Stable on ppc.

*gammu-1.02.0 (31 Jul 2005)

  31 Jul 2005; Alin Nastac <mrness@gentoo.org> -gammu-1.00.04.ebuild,
  gammu-1.01.0-r1.ebuild, +gammu-1.02.0.ebuild:
  Remove obsolete version. Mark stable on x86. Version bump.

*gammu-1.01.0-r1 (03 Jul 2005)

  03 Jul 2005; Alin Nastac <mrness@gentoo.org>
  +files/gammu-1.01.0-caller.patch, +gammu-1.01.0-r1.ebuild:
  Fix problem with caller groups on Nokia 6230 (#97603).

  12 Jun 2005; Lars Weiler <pylon@gentoo.org> gammu-1.01.0.ebuild:
  Stable on ppc.

  05 Jun 2005; Alin Nastac <mrness@gentoo.org> gammu-1.01.0.ebuild:
  Stable on x86.

  14 May 2005; Alin Nastac <mrness@gentoo.org> metadata.xml:
  Moved from net-dialup/gammu to app-mobilephone/gammu.

*gammu-1.01.0 (14 Apr 2005)

  14 Apr 2005; Alin Nastac <mrness@gentoo.org> -gammu-0.99.22.ebuild,
  gammu-1.00.04.ebuild, +gammu-1.01.0.ebuild:
  Version bump; remove obsolete version; update homepage.

  28 Feb 2005; Alin Nastac <mrness@gentoo.org> gammu-0.99.22.ebuild,
  gammu-1.00.04.ebuild:
  Move virtual/os-headers from RDEPEND to DEPEND (#82449).

  21 Feb 2005; Simon Stelling <blubb@gentoo.org> gammu-1.00.04.ebuild:
  added ~amd64

*gammu-1.00.04 (14 Feb 2005)

  14 Feb 2005; Lim Swee Tat <st_lim@gentoo.org> +gammu-1.00.04.ebuild:
  Version bump

  06 Feb 2005; Alin Nastac <mrness@gentoo.org> -gammu-0.98.0.ebuild,
  -gammu-0.98.9.ebuild, gammu-0.99.22.ebuild:
  Remove obsolete ebuilds.

*gammu-0.99.22 (17 Jan 2005)

  17 Jan 2005; Lim Swee Tat <st_lim@gentoo.org> +gammu-0.99.22.ebuild:
  Version bump at long last.

  19 Nov 2004; Alin Nastac <mrness@gentoo.org> gammu-0.98.9.ebuild:
  Stable on x86.

  06 Nov 2004; Lars Weiler <pylon@gentoo.org> gammu-0.98.9.ebuild: