@@ -1,1 +1,0 @@
-MD5 1ae9d7d51158c9f0cb5d3b25e7e7e1e1 gammu-1.01.0.tar.gz 860546
