@@ -1,0 +1,1 @@
+MD5 6c9b4428961eedc983e2925e364321d3 gammu-1.04.0.tar.gz 929495
