@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/gammu-1.02.0.ebuild,v 1.1 2005/07/31 07:43:46 mrness Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/gammu-1.02.0.ebuild,v 1.2 2006/01/02 12:59:24 mrness Exp $
 
 inherit eutils
 
@@ -13,7 +13,7 @@ HOMEPAGE="http://www.gammu.net/projects/gammu.php"
 IUSE="bluetooth irda mysql nls ssl"
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 
 RDEPEND="mysql? ( dev-db/mysql )
 	ssl? ( >=dev-libs/openssl-0.9.7d )
