@@ -1,6 +1,13 @@
 # ChangeLog for app-mobilephone/gammu
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.6 2005/08/14 10:01:25 hansmi Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-mobilephone/gammu/ChangeLog,v 1.7 2006/01/02 12:59:24 mrness Exp $
+
+*gammu-1.04.0 (02 Jan 2006)
+
+  02 Jan 2006; Alin Nastac <mrness@gentoo.org> -gammu-1.01.0.ebuild,
+  gammu-1.02.0.ebuild, +gammu-1.04.0.ebuild:
+  Remove obsolete version. Mark version 1.02 stable on x86. Version bump
+  (#117350).
 
   14 Aug 2005; Michael Hanselmann <hansmi@gentoo.org>
   gammu-1.01.0-r1.ebuild:
